--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -16,7 +16,7 @@ const navLinks = [
       <!-- Logo -->
       <a href="#" class="flex-shrink-0">
         <img
-          src="/images/logo.png"
+          src={`${import.meta.env.BASE_URL}/images/logo.png`}
           alt="Parken Treningssenter"
           class="h-12 w-auto"
         />
