--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import Chatbot from "../components/Chatbot.astro";
 import "../styles/global.css";
 ---
 
-<Layout title="Parken Treningssenter | 24/7 treningssenter i Eikanger">
+<Layout title="Parken Treningssenter | Døgnåpent gym i Eikanger | Ingen binding">
   <Navbar />
-  <main>
+  <main id="hovedinnhold">
     <Hero />
     <About />
     <Facilities />
