--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -17,8 +17,10 @@ const navLinks = [
       <a href="#" class="flex-shrink-0">
         <img
           src={`${import.meta.env.BASE_URL}/images/logo.png`}
-          alt="Parken Treningssenter"
+          alt="Parken Treningssenter – Treningssenter i Eikanger"
           class="h-12 w-auto"
+          width="48"
+          height="48"
         />
       </a>
 
