Correct spelling of "Døgnåpent" to "Døgnåpen" in Hero component and index page title for consistency.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Chatbot from "../components/Chatbot.astro";
 import "../styles/global.css";
 ---
 
-<Layout title="Parken Treningssenter | Døgnåpent gym i Eikanger | Ingen binding">
+<Layout title="Parken Treningssenter | Døgnåpen gym i Eikanger | Ingen binding">
   <Navbar />
   <main id="hovedinnhold">
     <Hero />
